# qa-email-ai

./: .gitignore  README.md  pyproject.toml
qa_email_ai/: data_amadeus.json  email.py  email_handler.py  llm.py  main.py  notion.py
qa_email_ai/assets/: amadeus_dados.csv
